# mojiokoshi

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  compose.override.yaml  compose.yaml  pyproject.toml  zizmor.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  mutation.yml
frontend/: package.json  svelte.config.js  vite.config.ts
frontend/src/lib/: api.ts  index.ts  state.svelte.ts
frontend/src/lib/components/: FileUpload.svelte  LanguageSelector.svelte  ModelSelector.svelte  ProgressBar.svelte  ThemeToggle.svelte  TranscriptionResult.svelte
frontend/src/routes/: +error.svelte  +page.svelte  layout.css
src/mojiokoshi/: __init__.py  config.py  main.py  models.py  settings.py
src/mojiokoshi/observability/: __init__.py  errors.py  logging.py  sentry.py
src/mojiokoshi/routes/: health.py  transcribe.py
src/mojiokoshi/services/: startup.py  whisper.py
tests/: conftest.py  test_settings.py
tests/contracts/: test_contracts.py
tests/observability/: test_errors.py  test_logging.py  test_sentry.py
tests/property/: test_models_props.py  test_whisper_props.py
tests/unit/: test_models.py  test_routes.py  test_startup.py  test_whisper_service.py
