[project]
name = "mojiokoshi"
version = "0.1.0"
description = "Audio transcription tool powered by faster-whisper"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "faster-whisper>=1.1",
    "python-multipart>=0.0.20",
    "deal>=4.24",
]

[project.scripts]
mojiokoshi = "mojiokoshi.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mojiokoshi"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.115",
    "mutmut>=2.0,<3",
    "httpx>=0.28",
    "polyfactory>=2.18",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=100",
]
markers = [
    "integration: marks tests requiring real model or GPU",
    "slow: marks tests that take >5s",
    "property: marks property-based tests",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
runner = "python -m pytest -x --no-header -q --no-cov"

[tool.ruff]
target-version = "py312"
line-length = 99
