[project]
name = "mojiokoshi"
version = "0.1.0"
description = "Audio transcription tool powered by faster-whisper"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.45",
    "faster-whisper>=1.2.1",
    "python-multipart>=0.0.26",
    "deal>=4.24.6",
    "structlog>=25.5",
    "rich>=15.0",
    "asgi-correlation-id>=4.3",
    "pydantic-settings>=2.14",
]

[project.optional-dependencies]
observability = [
    "sentry-sdk[fastapi]>=2.58",
]

[project.scripts]
mojiokoshi = "mojiokoshi.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mojiokoshi"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.1",
    "hypothesis>=6.152",
    "mutmut>=2.0,<3",
    "httpx>=0.28.1",
    "polyfactory>=3.3",
    "ruff>=0.15.11,<0.16",
    "pyrefly>=0.62",
    "pre-commit>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=100",
]
markers = [
    "integration: marks tests requiring real model or GPU",
    "slow: marks tests that take >5s",
    "property: marks property-based tests",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
runner = "python -m pytest -x --no-header -q --no-cov"

[tool.pyrefly]
search-path = ["src"]
python-version = "3.12"
project-includes = ["src/**/*.py"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]
extend-exclude = ["frontend/build", "htmlcov", ".mutmut-cache"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "B",
    "C4",
    "SIM",
    "UP",
    "N",
    "PT",
    "RUF",
    "PL",
    "S",
    "ASYNC",
    "ANN",
    "TC",
    "ARG",
    "TRY",
    "RET",
    "PTH",
    "ERA",
    "PGH",
]
ignore = [
    "PLR0913",
    "TRY003",
    "S101",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "PLR2004",
    "ANN",
    "ARG",
    "PLC0415",
    "SIM115",
]
"**/__init__.py" = ["F401"]
"src/mojiokoshi/main.py" = ["PLC0415", "S104"]
"src/mojiokoshi/config.py" = ["PLC0415"]
"src/mojiokoshi/services/whisper.py" = ["ARG005", "ANN401"]
"src/mojiokoshi/services/startup.py" = ["PLC0415", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["mojiokoshi"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "msgspec.Struct"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80
